<resources>
    <string name="app_name">OCRCamera</string>
    <string name="take_photo">Take pic</string>
    <string name="view_last_photo">Last pic</string>
    <string name="preview_failed">Preview failed!</string>
    <string name="surface_texture_bug">There is a bug in the SurfaceTexture instance.</string>
    <string name="state_callback_onError">Error in the state of the camera.</string>
    <string name="permissions_not_granted">Missing permissions.</string>
    <string name="update_preview_failed">Update preview failed.</string>
    <string name="no_last_photo">There are not a last photo</string>
    <string name="no_text_found">No text found, please try again</string>
    <string name="processing">Processing..</string>
    <string name="photoFileName">lastPhoto.jpg</string>
    <string name="savedPhotoPathKey">savedPhotoPathKey</string>
    <string name="pic_captured">Pic captured</string>
    <string name="analyzed_pic">Pic analyzed</string>
    <string name="tags">TAGs:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="notes">Notes:</string>
    <string name="pic">PIC</string>
    <string name="test">TEST</string>
    <string name="extrected_text">Extracted text:</string>
    <string name="focus_on_ingredients">Where are the ingredients?</string>
    <string name="alterations">Alterations:</string>
    <string name="inci_name_title">Inci name:</string>
    <string name="description_title">Description:</string>
    <string name="processing_ingredients">Extracting ingredients</string>
    <string name="processing_ocr">Executing ocr</string>
    <string name="extracted_ingredients_title">Extracted ingredients:</string>
    <string name="view_alterations">View alterations</string>
    <string name="extraction_error">"Something has gone wrong, plese try again."</string>
    <string name="error_code">"Error code: "</string>
    <string name="view_details">Details</string>
    <string name="searching_ingredients">Searching for ingredients</string>
    <string name="processing_image">Processing image</string>
    <string name="finding_text">Finding text</string>
    <string name="no_ingredient_found">No ingredient found</string>
    <string name="function_title">Function:</string>
    <string name="username">Username</string>
    <string name="hostname">Hostname</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="check_internet_connection">Check internet connection.</string>
    <string name="no_permission_to_internal_storage">No permission to internal storage.</string>
    <string name="bad_credentials_or_connection_reload_the_page_for_a_new_login">Bad Credentials or connection. Try again.</string>
    <string name="homeFragmentTag">homefgm</string>
    <string name="detailFragmentTag">detailfgm</string>
    <string name="serializableObjectName">PhotoStructureObject</string>
    <string name="galleryFragmentTitle">Gallery</string>
    <string name="galleryDetailsFragmentTitle">Details</string>
    <string name="elaboration_interrupted">Elaboration interrupted</string>
    <string name="tested">Tested:</string>
    <string name="of">of</string>
    <string name="confidence">confidence</string>
    <string name="drawer_menu_item_Allergens">Allergen Selection</string>
    <string name="drawer_menu_item_Gallery">Gallery</string>
    <string name="drawer_menu_item_forum">Forum</string>

    <!--List of strings for MainAllergensActivity-->
    <string name="allergens_search_bar">Type an allergen name</string>
    <string name="allergens_search_fragment">Allergen Selection</string>
    <string name="allergens_user_fragment">My Allergens</string>
    <string name="togglebutton_add_allergen">add</string>
    <string name="togglebutton_remove_allergen">remove</string>
    <string name="allergens_search_button">Search</string>
    <string name="wikipedia">Wikipedia:</string>
    <string name="wikipedia_searching">Searching on wikipedia&#8230;</string>
    <string name="wikipedia_not_found">Could not find any wikipedia pages.</string>
    <string name="wikipedia_failed_request">Could not send request to wikipedia.</string>
    <string name="search_title">Search an ingredient</string>
    <string name="search_hint">Search an ingredient</string>
    <string name="details_search_button">Search more</string>
    <string name="too_bright_picture">The picture might be too bright</string>
    <string name="too_dark_picture">The picture might be too dark</string>
    <string name="empty_ingredients_list_message">Nothing found</string>
    <string name="download_test_pics">No test pics fond, download them please.</string>
    <string name="forum">Forum</string>
    <string name="selected_allergens_sharedPref">unipd.se18.ocrcamera.SELECTED_ALLERGENS</string>
    <string name="sharedPrefNameForImagePath">imagePath</string>
    <string name="progressDialogGalleryTitle">Gallery</string>
    <string name="progressDialogGalleryMessage">Loading images…</string>
    <string name="alertDialogGalleryTitle">Permission error</string>
    <string name="alertDialogGalleryMessage">You did not have authorized the app to use internal storage.</string>
    <string name="progressDialogDownloadTitle">Login</string>
    <string name="progressDialogDownloadMessage">Loading…</string>
    <string name="letter_icon">Letter icon</string>
    <string name="sharedPrefNameProcessedImage">processedImageDataPath</string>
    <string name="error_creating_tester">Test pics not found, redirecting to the download section</string>
    <string name="error_with_test">Error while elaborating test </string>
    <string name="did_you_mean">Did you mean: </string>
    <string name="allergens" />
    <string name="camera" />
    <string name="gallery" />
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">Intro</string>
    <string name="bnv_result_title">result</string>
    <string name="bnv_camera_title">camera</string>
    <string name="bnv_forum_title">forum</string>

</resources>
