<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DownloadDbActivity"
    android:padding="5dp">

    <TextView
        android:id="@+id/txtInternetStatusDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/check_internet_connection"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/txtPermissionStatusDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/no_permission_to_internal_storage"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtLoginStatusDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/bad_credentials_or_connection_reload_the_page_for_a_new_login"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/LayoutLogin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/txtHostnameDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hostname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtUsernameDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtPasswordDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/downloadLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/LayoutDownload">
        <Button
            android:id="@+id/downloadDbButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Download photos"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="34dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Status: "
            android:textSize="18sp" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:fillViewport="true">

            <TextView
                android:id="@+id/textViewCurrentDownload"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp"
                android:text="" />
        </ScrollView>
    </LinearLayout>
</LinearLayout>